Solved day 1